# UhhyouPluginsJuce

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  deploy-docs.yml
AmplitudeModulator/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  parameter.hpp  plugin.cmake
AmplitudeModulator/dsp/: am.hpp  dspcore.cpp  dspcore.hpp
AmplitudeModulator/gui/: popupinformationtext.hpp
EasyOverdrive/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  parameter.hpp  plugin.cmake
EasyOverdrive/dsp/: dspcore.cpp  dspcore.hpp  overdrive.hpp
EasyOverdrive/gui/: popupinformationtext.hpp
SlopeFilter/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.h  parameter.hpp  plugin.cmake
SlopeFilter/dsp/: dspcore.cpp  dspcore.hpp  filter.hpp
TwoBandStereo/: PluginEditor.cpp  PluginEditor.h  parameter.hpp  plugin.cmake
TwoBandStereo/dsp/: crossover.hpp  dspcore.cpp  dspcore.hpp
assets/UhhyouPlugins/ShockFlanger/Uhhyou/: Distortion halfwave bend.xml  Distortion halfwave.xml  Distortion high gain.xml  Distortion triangle.xml  Distortion wavefront guitar.xml  Flanger doubtful stability.xml  Flanger fat 6.xml  Flanger harmonics.xml  Flanger negative.xml  Flanger positive.xml  Rindmod basic.xml  Rindmod retro.xml  Rindmod softsign3.xml  Timemod resonance.xml
assets/UhhyouPlugins/ShockFlanger/presets/: Default.xml
assets/UhhyouPlugins/ShockFlanger/presets/Uhhyou/: Distortion far reflection.xml  Distortion intercontinental.xml  Distortion log.xml  Distortion soft chaotic.xml  Distortion tail slide.xml  Distortion wavefront bass.xml  FM.xml  Flanger metallic high.xml  Flanger strong.xml  Flanger subtle.xml  (+11 more)
assets/UhhyouPlugins/appearance/: Business.json  Daisy.json  DefaultDark.json  DefaultLight.json  Earth.json  Gecko.json  Heat.json  MissingStart.json  Panel.json  Space.json
ci/: ci_macos.sh  ci_ubuntu.sh  ci_windows.ps1
common/: librarylicense.hpp  scale.hpp  scaledparameter.hpp
common/dsp/: basiclimiter.hpp  multirate.hpp  multiratecoefficient.hpp  smoother.hpp  svf.hpp
common/gui/: barbox.hpp  button.hpp  buttonarray.hpp  combobox.hpp  knob.hpp  parameterarrayattachment.hpp  popupview.hpp  presetmanager.hpp  style.cpp  style.hpp  tabview.hpp  widgets.hpp
docs/: README.md  dev_note.md  hugo.yaml  user_manual_draft.md
docs/archetypes/: default.md
docs/assets/css/: section-number.css  uhhyou-gui.css
docs/assets/js/: uhhyou-gui.js
docs/content/: _index.en.md  _index.ja.md  _index.md
docs/content/ShockFlanger/: index.md
docs/content/plugin/ShockFlanger/: index.en.md  index.ja.md  index.md
docs/content/shared/: configuration.md  controls.md  installation.md
docs/content/test/: index.md
docs/content/test/audio/: unaware.opus
docs/content/usage/: configuration.md  controls.md  setup.md  usage.en.md  usage.ja.md
docs/i18n/: en.yaml  ja.yaml
docs/layouts/_default/: baseof.html  list.html  plugin-mockup.html  single.html
docs/layouts/_markup/: render-heading.html
docs/layouts/shortcodes/: altkey.html  def.html  div.html  dl.html  modkey.html  ref.html  shortcuts.html  sitemap.html
docs/static/: index.html
docs/static/css/: style.css  syntax-dark.css  syntax-light.css
experimental/: CMakeLists.txt  README.md
experimental/AmplitudeModulator/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.h  PluginProcessor.hpp  parameter.hpp
experimental/AmplitudeModulator/dsp/: am.hpp  dspcore.cpp  dspcore.hpp
experimental/ClickyTransient/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.hpp  parameter.hpp
experimental/ClickyTransient/dsp/: dspcore.cpp  dspcore.hpp  transientshaper.hpp
experimental/ClickyTransient/gui/: envelopedisplay.hpp
experimental/EasyOverdrive/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.h  parameter.hpp
experimental/EasyOverdrive/dsp/: basiclimiter.hpp  dspcore.cpp  dspcore.hpp  overdrive.hpp
experimental/EasyOverdrive/gui/: popupinformationtext.hpp
experimental/SlopeFilter/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  parameter.hpp
experimental/SlopeFilter/dsp/: dspcore.cpp  dspcore.hpp  filter.hpp
experimental/TwoBandStereo/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.hpp  parameter.hpp
experimental/TwoBandStereo/dsp/: crossover.hpp  dspcore.cpp  dspcore.hpp
lib/: CMakeLists.txt  README.md
lib/Uhhyou/: CMakeLists.txt  librarylicense.hpp  scale.hpp  scaledparameter.hpp
lib/Uhhyou/cmake/: additional_compiler_flag.cmake  generate_cpp_text.cmake
lib/Uhhyou/dsp/: basiclimiter.hpp  multirate.hpp  multiratecoefficient.hpp  smoother.hpp  svf.hpp
lib/Uhhyou/gui/: barbox.hpp  button.hpp  buttonarray.hpp  combobox.hpp  editorbase.hpp  filemenu.hpp  horizontaldrawer.hpp  informationtext.hpp  knob.hpp  lookandfeel.hpp  navigation.hpp  numbereditor.hpp  parameterarrayattachment.hpp  parameterlock.hpp  popupview.hpp  presetmanager.hpp  style.cpp  style.hpp  tabview.hpp  uhhyoueditor.hpp  widgets.hpp  xypad.hpp
lib/specialmath/: cephes.hpp
lib/specialmath/cephes/: ei.hpp  shichi.hpp  sici.hpp  util.hpp
lib/specialmath/jyzo/: README.md  compare.py  jyzo.hpp  target.json  test.cpp  test.json  test.ps1
plugin/: CMakeLists.txt
plugin/ShockFlanger/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.h  PluginEditor.hpp  PluginProcessor.cpp  PluginProcessor.hpp  parameter.hpp
plugin/ShockFlanger/dsp/: dspcore.cpp  dspcore.hpp  fdn.hpp  saturator.hpp
plugin/ShockFlanger/gui/: delaytimedisplay.hpp  lfophasedisplay.hpp  meterdisplay.hpp  popupinformationtext.hpp
plugin/SpiralDelay/: PluginEditor.cpp  PluginEditor.h
plugins/ShockFlanger/: CMakeLists.txt  PluginEditor.cpp  PluginEditor.hpp  PluginProcessor.hpp  parameter.hpp
plugins/ShockFlanger/dsp/: fdn.hpp
plugins/ShockFlanger/gui/: delaytimedisplay.hpp  lfophasedisplay.hpp
test/svg_comparison/: compare.html  gradient-editor.html
tool/: README.md  deploy_windows.py
tools/: README.md
